# fmt-bench

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  test_formatter.cpp  test_functions.hpp  test_iostream.cpp
benchmark/src/: complexity.cc
include/fmt/: chrono_old.h  format_old.h  ostream_old.h
